--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -1,12 +1,12 @@
 
 <h2>Reasearch job</h2>
 <ul class='nav'>
-	<li><a href='pages/bio_pages/bio_eng.html'>
+	<li><a href='pages/bios/bio_eng.html'>
 		<p>2017-now: Bionformatic engineer<br>
 		Genome-Scale Metabolic Networks reconstruction.<br>
 		</p></a>
 	</li>
-	<li><a href='pages/bio_pages/bio.html'>
+	<li><a href='pages/bios/bio.html'>
 		<p>Test 2<br>
 		</p></a>
 	</li>       		   		   
