--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -1,12 +1,12 @@
 
 <h2>Reasearch job</h2>
-<ul class='nav'>
-		<li><a href="{{ "/pages/bios/bioeng.html" | prepend: site.baseurl }}">
+<ul class='leftnav'>
+		<li><a href="{{ "/pages/bios/bio.html" | prepend: site.baseurl }}">
 		<p>2017-now: Bionformatic engineer<br>
 		Genome-Scale Metabolic Networks reconstruction.<br>
 		</p></a>
 	</li>
-	<li><a href="{{ "/pages/bios/bio.html" | prepend: site.baseurl }}">
+	<li><a href="{{ "/pages/bios/bioeng.html" | prepend: site.baseurl }}">
 		<p>Test 2<br>
 		</p></a>
 	</li>       		   		   
