--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -2,14 +2,14 @@
 <h2>Reasearch job</h2>
 <ul class='leftnav'>
 	<li>
-		<a href="{{ "/pages/cv/2017cdd.html" | prepend: site.baseurl }}">
+		<a href="{{site.baseurl}}/pages/cv/2017_cdd.html">
 			<p>2017-now: Bionformatic engineer<br>
 			Genome-Scale Metabolic Networks reconstruction.<br>
 			</p>
 		</a>
 	</li>
 	<li>
-		<a href="{{ "/pages/cv/2017cont.html" | prepend: site.baseurl }}">
+		<a href="{{site.baseurl}}/pages/cv/2017_cont.html">
 			<p>2017: Contractual job<br>
 				Writing an article on <i>Plasmodiophora brassicae</i> internship results.
 			</p>
@@ -20,24 +20,32 @@
 <h2>Internship</h2>
 <ul>
 	<li>
-		<p>2017: Internship in Bioinformatic<br>
-			Differential gene expression in <i>Plasmodiophora brassicae</i>.<br>
-		</p>
+		<a href="{{site.baseurl}}/pages/cv/2017_internship.html">
+			<p>2017: Internship in Bioinformatic<br>
+				Differential gene expression in <i>Plasmodiophora brassicae</i>.<br>
+			</p>
+		</a>
 	</li>
 	<li>
-		<p>2016: Intenrship in Bioinformatic<br>
-			RDF data and SPARQL queries on aphid data.<br>
-		</p>
+		<a href="{{site.baseurl}}/pages/cv/2016_internship.html">
+			<p>2016: Intenrship in Bioinformatic<br>
+				RDF data and SPARQL queries on aphid data.<br>
+			</p>
+		</a>
 	</li>
 	<li>
-		<p>2015: Internship in Behavioural Biology<br>
-			Social and vocal convergence in european starling.<br>
-		</p>
+		<a href="{{site.baseurl}}/pages/cv/2015_internship.html">
+			<p>2015: Internship in Behavioural Biology<br>
+				Social and vocal convergence in european starling.<br>
+			</p>
+		</a>
 	</li>
 	<li>
-		<p>2014: Intenrship in Behavioural Biology<br>
-			Water pollution and nudges.<br>
-		</p>
+		<a href="{{site.baseurl}}/pages/cv/2014_internship.html">
+			<p>2014: Intenrship in Behavioural Biology<br>
+				Water pollution and nudges.<br>
+			</p>
+		</a>
 	</li>
 </ul>
 
