Update Bio and publications.

--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -3,7 +3,7 @@
 <ul class='leftnav'>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2017_cdd.html">
-			<p>2017-now: Bionformatic engineer<br>
+			<p>2017-2019: Bionformatic engineer<br>
 			Genome-Scale Metabolic Networks reconstruction.<br>
 			</p>
 		</a>
