Add reference to CV pages.

--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -3,14 +3,14 @@
 <ul class='leftnav'>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2017_cdd.html">
-			<p>2017-2019: Bionformatic engineer<br>
+			<p>2017-2019: Bionformatic engineer (CNRS, <a href="http://www.irisa.fr/dyliss/">Dyliss Team</a>)<br>
 			Genome-Scale Metabolic Networks reconstruction.<br>
 			</p>
 		</a>
 	</li>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2017_cont.html">
-			<p>2017: Contractual job<br>
+			<p>2017: Contractual job (INRA, <a href="https://www6.rennes.inra.fr/igepp_eng/Research-teams/Resistance-and-Adaptation">IGEPP RA team</a>)<br>
 				Writing an article on <i>Plasmodiophora brassicae</i> internship results.
 			</p>
 		</a>
@@ -21,28 +21,28 @@
 <ul>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2017_internship.html">
-			<p>2017: Internship in Bioinformatic<br>
+			<p>2017: Internship in Bioinformatic (INRA, <a href="https://www6.rennes.inra.fr/igepp_eng/Research-teams/Resistance-and-Adaptation">IGEPP RA team</a>)<br>
 				Differential gene expression in <i>Plasmodiophora brassicae</i>.<br>
 			</p>
 		</a>
 	</li>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2016_internship.html">
-			<p>2016: Intenrship in Bioinformatic<br>
+			<p>2016: Intenrship in Bioinformatic (Université de Rennes 1, <a href="http://www.irisa.fr/dyliss/">Dyliss Team</a>)<br>
 				RDF data and SPARQL queries on aphid data.<br>
 			</p>
 		</a>
 	</li>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2015_internship.html">
-			<p>2015: Internship in Behavioural Biology<br>
+			<p>2015: Internship in Behavioural Biology (Université de Rennes 1, <a href="https://ethos.univ-rennes1.fr/">EthoS Team</a>)<br>
 				Social and vocal convergence in european starling.<br>
 			</p>
 		</a>
 	</li>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2014_internship.html">
-			<p>2014: Intenrship in Behavioural Biology<br>
+			<p>2014: Intenrship in Behavioural Biology (Université de Rennes 1, <a href="https://crem.univ-rennes1.fr/">CREM Team</a>)<br>
 				Water pollution and nudges.<br>
 			</p>
 		</a>
