--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -2,6 +2,13 @@
 <h2>Reasearch job</h2>
 <ul class='leftnav'>
 	<li>
+			<a href="{{site.baseurl}}/pages/cv/2019_phd.html">
+				<p>2019-2022: PhD Thesis<br>
+				Community reduction in Metagenomics.<br>
+				</p>
+			</a>
+		</li>
+	<li>
 		<a href="{{site.baseurl}}/pages/cv/2017_cdd.html">
 			<p>2017-2019: Bionformatic engineer<br>
 			Genome-Scale Metabolic Networks reconstruction.<br>
