Update CV pages.

--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -2,12 +2,19 @@
 <h2>Reasearch job</h2>
 <ul class='leftnav'>
 	<li>
-			<a href="{{site.baseurl}}/pages/cv/2019_phd.html">
-				<p>2019-2022: PhD Thesis<br>
-				Community reduction in Metagenomics.<br>
-				</p>
-			</a>
-		</li>
+		<a href="{{site.baseurl}}/pages/cv/2022_postdoc.html">
+			<p>2022-2023: Post-Doctoral fellow<br>
+			Following of the thesis.<br>
+			</p>
+		</a>
+	</li>
+	<li>
+		<a href="{{site.baseurl}}/pages/cv/2019_phd.html">
+			<p>2019-2022: PhD Thesis<br>
+			Community reduction in Metagenomics.<br>
+			</p>
+		</a>
+	</li>
 	<li>
 		<a href="{{site.baseurl}}/pages/cv/2017_cdd.html">
 			<p>2017-2019: Bionformatic engineer<br>
