Update blog with new article and new job.

--- a/_includes/bio_nav_bar.html
+++ b/_includes/bio_nav_bar.html
@@ -2,6 +2,13 @@
 <h2>Reasearch job</h2>
 <ul class='leftnav'>
 	<li>
+		<a href="{{site.baseurl}}/pages/cv/2023_postdoc.html">
+			<p>2023-2025: Post-Doctoral fellow<br>
+			Study of microbial community metabolism.<br>
+			</p>
+		</a>
+	</li>
+	<li>
 		<a href="{{site.baseurl}}/pages/cv/2022_postdoc.html">
 			<p>2022-2023: Post-Doctoral fellow<br>
 			Following of the thesis.<br>
